app/src/main/java/com/example/truckercore/core/error/default_errors/EmptyDataException.kt
package com.example.truckercore.core.error.default_errors

class EmptyDataException(message: String? = null) : Exception(message)